--- a/src/components/ques-section/ques.css
+++ b/src/components/ques-section/ques.css
@@ -24,6 +24,7 @@
     width: 100%;
     text-align: left;
     background-color: #f1f2f2;
+    cursor: pointer;
 
 }
 
@@ -41,6 +42,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 8px 8px 8px;
+    cursor: pointer;
 }
 
 .q-ask-ans-post {
@@ -68,4 +70,143 @@
     text-align: center;
     margin-left: 2px;
     margin-right: 2px;
+}
+
+
+.q-box-modal {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+.question-post-box {
+    margin: 10px;
+    padding: 10px;
+    width: 420px;
+    border: 1px solid rgb(117, 113, 113);
+    background-color: #fff;
+    border-radius: 4px;
+}
+
+.q-box-top {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #dee0e1;
+}
+
+.close-q-box {
+    cursor: pointer;
+}
+
+.active-ques-div {
+    border-bottom: 2px solid #3d67f6;
+}
+
+.q-add-ques {
+    max-width: 142px;
+    padding: 2px 16px 2px;
+    cursor: pointer;
+}
+
+.q-create-post {
+    max-width: 142px;
+    padding: 2px 16px 2px;
+    cursor: pointer;
+}
+
+.q-box-middle {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.q-box-profile-n-share-with {
+    display: flex;
+    gap: 5px;
+    align-items: center;
+    /* padding-top: 8px;
+    padding-bottom: 8px; */
+}
+
+.ques-hint {
+    font-size: 14px;
+    color: #636466;
+    padding-bottom: 8px;
+}
+
+.q-box-bottom {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.c-post-bottom {
+    display: flex;
+    justify-content: space-between;
+}
+
+.c-post-inner-div {
+    display: flex;
+    column-gap: 10px;
+    align-items: center;
+    color: #4c4e53;
+}
+
+.add-question-btn-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #3d67f6 !important;
+    color: #fff;
+    font-size: 12px;
+    font-weight: 500;
+    border-radius: 22px;
+    width: 85px;
+    height: 26px;
+    margin: 3px;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.cancel-btn-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    font-size: 12px;
+    font-weight: 500;
+    height: 26px;
+    width: 64px;
+    border-radius: 22px;
+    margin: 3px;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.cancel-btn-div:hover {
+    background-color: #d4d4d4;
+}
+
+.ques-input-div {
+    box-sizing: border-box;
+    width: 100%;
+    border-top: 1px solid #dee0e1;
+    border-bottom: 1px solid #dee0e1;
+}
+
+.ques-input-area {
+    box-sizing: border-box;
+    width: 100%;
+    border: none;
+
+}
+
+.ques-input-area:focus {
+    outline: 0;
 }
