--- a/src/components/myspaces/spaces.css
+++ b/src/components/myspaces/spaces.css
@@ -15,14 +15,6 @@
     display: none;
 }
 
-/* .spaces-contaier-item {
-    border-radius: 4px;
-}
-
-.spaces-contaier-item:hover {
-    background-color: #626364;
-} */
-
 .spaces-div {
     display: flex;
     flex-direction: row;
@@ -30,6 +22,7 @@
     padding: 5px;
     overflow: hidden;
     border-radius: 3px;
+    cursor: pointer;
 }
 
 .spaces-div:hover {
