--- a/src/components/navbar/header.css
+++ b/src/components/navbar/header.css
@@ -76,7 +76,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    color: #636466;
+    color: #b92b27;
 }
 
 .link-icon-svg {
@@ -353,4 +353,14 @@
 
 .ques-input-area:focus {
     outline: 0;
+}
+
+
+.show-spaces {
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: rgba(250,250,250, 0.8);
+    display: flex;
+    justify-content: space-around;
 }
