--- a/src/components/ques-section/ques.css
+++ b/src/components/ques-section/ques.css
@@ -85,6 +85,7 @@
     align-items: center;
     z-index: 1;
     background-color: rgba(255, 255, 255, 0.8);
+    /* background-color: rgb(255,255,255); */
 }
 
 .question-post-box {
